# ghostline-gate

./: .gitignore  CMakeLists.txt  PHASE1_RUNBOOK.md  README.md  echo_server  echo_server.cpp  frame.txt  ldpy.py  lp_server.py  sim.bash
docs/: ghostline_cli_cheatsheet.md
examples/lua/: pid_search.lua
examples/python/: pid_search.py
examples/rules/: mqtt_publish.jinja  raw-live.json  raw-live.tfvars
include/core/: types.hpp
include/ghostline/: audit.hpp  model.hpp  operator_state.hpp  pid_search.hpp  plugin.hpp
include/net/: encode.hpp  frame.hpp  frame_extractor.cpp  frame_extractor.hpp  proxy.hpp  stream_buffer.hpp
include/transform/: chain.hpp  patch_transform.hpp  transform.hpp
man/: ghostline_cli.1
src/: audit.cpp  builtin_plugins.cpp  linux_epoll_proxy.cpp  main.cpp  operator_state.cpp  pid_search.cpp  plugin_registry.cpp  qt_operator_main.cpp  transport_core.cpp
tests/: Host.py  MqttHost.py  MqttServer.py  Server.py  assert_simulation.py  ghostline_tests.cpp  test_rules_loader.py
tests/fixtures/: mqtt_publish.json  raw_live.json
tools/: resolve_rules.py
